# uv2nix

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  flake.nix  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
parts/: apps.nix  devShell.nix  flake.nix  nixosModules.nix  packages.nix
src/hello_world/: __init__.py
src/tests/: test_hello_world.py
