[project]
name = "hello-world"
version = "0.1.0"
description = "python project managed by uv2nix"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Andrew Lee", email = "andrewthomaslee.business@gmail.com" }]
requires-python = ">=3.14"
dependencies = [ ]

[project.scripts]
hello_world = "hello_world:hello"
howdy_yall = "hello_world:howdy"

[build-system]
type = "custom"
command = ["nix", "build"]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyrefly>=0.33.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.1",
]

[tool.ruff]
line-length = 101
target-version = "py314"
lint.ignore = ["E712"]

[tool.pyrefly]
project-includes = ["src/**/*"]
